[package]
name = "wyst-lex"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.11"
logos = "0.12.0"
wyst-core = { path = "../core" }
wyst-core-traits = { path = "../core-traits" }
wyst-source = { path = "../source" }
