[package]
name = "wyst-source"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0"
wyst-macros = { path = "../macros" }

[dev-dependencies]
pretty_assertions = "0.6.1"
