[package]
name = "wyst-style"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
rust-fsm = "0.5.0"
wyst-core = { path = "../core" }
wyst-core-traits = { path = "../core-traits" }
